a11y: StLabelAccessible needs to notify accessible-name change

https://bugzilla.gnome.org/show_bug.cgi?id=667376